--- a/config/database.yml
+++ b/config/database.yml
@@ -4,25 +4,49 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+# herokuデプロイ用
+# default: &default
+#   adapter: sqlite3
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+#
+# development:
+#   <<: *default
+#   database: db/development.sqlite3
+#
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
+#
+#   production:
+# #半角スペース２個分の空白を開ける
+#   <<: *default
+#   adapter: postgresql
+#   encoding: unicode
+#   pool: 5
+
+
+# AWSデプロイ用
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
   timeout: 5000
+  username: rails_todo_tutorial_user
+  password: test
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: rails_todo_tutorial_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: rails_todo_tutorial_test
 
-  production:
-#半角スペース２個分の空白を開ける
+production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  database: rails_todo_tutorial_production
